--- a/assets/pages/servicios.html
+++ b/assets/pages/servicios.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="../css/style-flex-grid.css">
     <link rel="shortcut icon" href="../image/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/fonts/Roboto/Roboto-Regular.ttf"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body id="gridAreas">
     <header>
-            <div class="logoPadre">
+            <div class="logoPadre animate__animated animate__rollIn">
                 <a href="../../index.html"><img src="../image/logo-1.jpg" alt="logo de la empresa DV-Print3D" id="logo-1" class="logoHijo" width="200" height="200"></a>
             </div>
             <nav class="navMenu border" id="navAreas">
@@ -24,15 +25,15 @@
     <main>
         <br>
 
-        <h1 class="titulo">Servicios</h1>
+        <h1 class="titulo animate__animated animate__bounceInLeft">Servicios</h1>
 
         <br>
         
         <section>
         <article id="p1Ser">
                 <div>
-                    <img src="../image/escaner3d.jpg" hspace="5" vspace="5" style="float: left;" width="200" height="200"/>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                    <img    src="../image/escaner3d.jpg" hspace="5" vspace="5" style="float: left;" width="200" height="200"/>
+                    <p class="animate__animated animate__lightSpeedInRight"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                         Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. 
                         Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                         Excepteur   sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt   mollit anim id est laborum.</p>
@@ -42,7 +43,7 @@
         <article id="p2Ser">
             <div>
                 <img src="../image/sercice-1.jpg" hspace="5" vspace="5" style="float: left;" width="200" height="200"/>
-                <p> 
+                <p class="animate__animated animate__lightSpeedInRight"> 
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   
@@ -55,7 +56,7 @@
         <article id="p3Ser">
             <div>
                 <img src="../image/service-3.jpg" hspace="5" vspace="5" style="float: left;" width="200" height="200"/>
-                <p> 
+                <p class="animate__animated animate__lightSpeedInRight"> 
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do   eiusmod tempor incididunt ut labore et dolore magna aliqua.
                     Ut enim ad   minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip   ex ea commodo consequat. 
                     Duis aute irure dolor in reprehenderit in   voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur   
