--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./assets/css/style-flex-grid.css">
     <link rel="shortcut icon" href="./assets/image/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/css/fonts/Roboto/Roboto-Regular.ttf"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 <!-- <link rel="stylesheet" href="assets/css/style.css"> -->
 </head>
 <body id="gridAreas">
     <header >
-                    <div class="logoPadre" >
+                    <div class="logoPadre animate__animated animate__rollIn" >
                         <a href="/index.html"><img src="assets/image/logo-1.jpg" alt="logo de la empresa DV-Print3D" id="logo-1" class="logoHijo" width="200" height="200"></a>
                     </div>
                     <nav class="navMenu border" id="navAreas">
@@ -25,7 +26,7 @@
     <main >
             
             <br>
-        <h1 class="titulo">Bienbenidos a DV-Print3D </h1>
+        <h1 class="titulo animate__animated animate__bounceInLeft">Bienbenidos a DV-Print3D </h1>
         <!-- section acerca-->
         <section>
 
