--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body id="gridAreas">
     <header >
-                    <div class="logoPadre animate__animated animate__rollIn" >
+                    <div class="logoPadre animate__animated animate__bounceInDown" >
                         <a href="/index.html"><img src="assets/image/logo-1.jpg" alt="logo de la empresa DV-Print3D" id="logo-1" class="logoHijo" width="200" height="200"></a>
                     </div>
                     <nav class="navMenu border" id="navAreas">
@@ -56,7 +56,7 @@
             </div>
         </article>
             <br><br><br><br><br><br>
-        <article>
+        <article class="mediaFlex">
             <iframe class="media" src="https://www.youtube.com/embed/m_QhY1aABsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </article>
 
