--- a/assets/pages/diseños.html
+++ b/assets/pages/diseños.html
@@ -12,7 +12,7 @@
 </head>
 <body id="gridAreas">
     <header>
-            <div class="logoPadre animate__animated animate__rollIn">
+            <div class="logoPadre animate__animated animate__bounceInDown">
                 <a href="../../index.html"><img src="../image/logo-1.jpg" alt="logo de la empresa DV-Print3D" id="logo-1" class="logoHijo" width="200" height="200"></a>
             </div>
             <nav class="navMenu border" id="navAreas">
